Fix embed card layout and description Fix social link dropdown on mobile

--- a/_sass/custom/titlebar.scss
+++ b/_sass/custom/titlebar.scss
@@ -61,6 +61,7 @@
         top: 80px;
         right: var(--margin);
         background-color: $surface-2;
+        box-shadow: $shadow;
         padding: 10px;
         @include round(16px);
 
